src/ContactWorld for Salesforce/objects/CallEndEvent__c.object
<CustomObject>
    <description>Represents a call ending in Call Centre, and contains all the information to create a task in Salesforce.</description>
    <fields>
        <fullName>ACD__c</fullName>
        <label>ACD</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CW_Call_End_Time__c</fullName>
        <label>CW Call End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CW_Call_Start_Time__c</fullName>
        <label>CW Call Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CallDurationInSeconds__c</fullName>
        <label>Call Duration</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CallLegInfoJson__c</fullName>
        <label>Call Leg Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CallObject__c</fullName>
        <label>Call Object Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallRingTimeInSeconds__c</fullName>
        <label>Call Ring Time</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CallTalkTimeInSeconds__c</fullName>
        <label>Call Talk Time</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CallType__c</fullName>
        <label>Call Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactWorld_Number__c</fullName>
        <label>ContactWorld Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <label>Customer Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Service_Name__c</fullName>
        <label>Service Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Was_Call_Recorded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call Was Recorded</label>
        <type>Checkbox</type>
    </fields>
    <label>Call End Event</label>
    <nameField>
        <label>Call End Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Call End Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>